// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhook-event-check caches result of /app, logs error for event that the app is not subscribed to 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Your app is attempting to listen to \\"team.created\\", but your GitHub App is not subscribed to the \\"team\\" event.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`webhook-event-check warn user when listening to unsubscribed event 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Your app is attempting to listen to \\"pull_request.opened\\", but your GitHub App is not subscribed to the \\"pull request\\" event.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`webhook-event-check warn user when unable to retrieve app metadata 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Your app is attempting to listen to \\"pull_request.opened\\", but your GitHub App is not subscribed to the \\"pull request\\" event.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
